// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton /> should render component with custom thumb color 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#007AFF80"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Array [
        Array [
          Object {},
        ],
        Object {
          "backgroundColor": "#0000004D",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbColorProps={
    Object {
      "falseColor": "blue",
      "trueColor": "red",
    }
  }
  thumbTintColor="red"
  tintColor="#0000004D"
  value={true}
/>
`;

exports[`<ToggleButton /> should render component with custom track color 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="red"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Array [
        Array [
          Object {},
        ],
        Object {
          "backgroundColor": "blue",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbTintColor="#007AFF"
  tintColor="blue"
  trackColorProps={
    Object {
      "falseColor": "blue",
      "trueColor": "red",
    }
  }
  value={true}
/>
`;

exports[`<ToggleButton /> should render toggle component 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={false}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#007AFF80"
  style={
    Array [
      Object {
        "height": 31,
        "width": 51,
      },
      Array [
        Array [
          Object {},
        ],
        Object {
          "backgroundColor": "#0000004D",
          "borderRadius": 16,
        },
      ],
    ]
  }
  testID="toggle_button"
  thumbTintColor="#007AFF"
  tintColor="#0000004D"
  value={true}
/>
`;
